<resources>

    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="remember">记住密码</string>
    <string name="forget">忘记密码</string>
    <string name="mail">邮箱</string>
    <string name="text1">账号或密码不能为空</string>

    <string name="app_name">智能农业</string>
    <string name="title_env">环境监测</string>
    <string name="title_remote">远程控制</string>
    <string name="title_params">参数设定</string>
    <string name="save_confirm">确认保存</string>
    <string name="restore">恢复默认</string>
    <string name="param_setting">参数设定</string>
    <string name="network_state">网络状态</string>
    <string name="connect_state">连接状态：</string>
    <string name="dot">.</string>
    <string name="ip">IP地址：</string>
    <string name="air_environ">空气环境</string>
    <string name="soil_environ">土壤环境</string>
    <string name="irrigation_environ">灌溉环境</string>
    <string name="weather_tmp_value">%1$d ℃</string>
    <string name="_3">未来3天天气预报</string>
    <string name="soil_tmp">土壤温度</string>
    <string name="soil_humidity">土壤湿度</string>
    <string name="salt_s">盐溶解度</string>
    <string name="ph">酸碱度</string>
    <string name="percent">%</string>
    <string name="cel">℃</string>
    <string name="ms_cm">mS/cm</string>
    <string name="air_tmp">空气温度</string>
    <string name="air_humidity">空气湿度</string>
    <string name="illu">光照强度</string>
    <string name="co2">CO₂浓度</string>
    <string name="lux">lux</string>
    <string name="ppm">ppm</string>
    <string name="water_light_irri"><![CDATA[遮阳/补光&灌溉系统]]></string>
    <string name="turn_on">已开启</string>
    <string name="turn_off">已关闭</string>
    <string name="init_complete">软件初始化完毕</string>
    <string name="network_server_offline">网络未开或服务器关</string>
    <string name="tip">提示：</string>
    <string name="register">注册</string>
    <string name="title_note">点击输入标题</string>
    <string name="note">备注</string>

    <string name="cancel">取消</string>
    <string name="time_select">请选择时间</string>
    <string name="commit">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>
    <string name="night_mode">夜间模式</string>
    <string name="setting">设置</string>
    <string name="exit">退出</string>
    <string name="loading">登录中...</string>
</resources>
